# pooppi-export

./: .gitignore  Cargo.toml  LICENCE  README.md
.cargo/: config.toml
data/: downloadScoreboard.sh
src/: downloadScoreboard.sh  error.rs  lib.rs  main.rs  stats.rs
src/stats/: insert_objective.sql  insert_player.sql  insert_stat.sql  mod.rs  schema.sql
