[package]
name = "poop-data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
csv = "1.3.0"
hematite-nbt = "0.5.2"
serde = "1.0.203"
serde_json = "1.0.120"
sqlx = { version = "0.7.4", features = ["mysql"]}
ssh2 = "0.9.4"

[lib]
name = "poop_scoreboard"
path = "src/lib.rs"

[[bin]]
name = "nbt-to-csv"
path = "src/bin/nbt-to-csv.rs"
