[package]
name = "poop-data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.8", features = ["derive"] }
csv = "1.3.0"
futures = "0.3.30"
hematite-nbt = "0.5.2"
serde = "1.0.203"
serde_json = "1.0.120"
sqlx = { version = "0.7.4", features = ["mysql", "runtime-async-std", "chrono"]}

[lib]
name = "poop_scoreboard"
path = "src/lib.rs"
